# ia-proyect

./: .cursorignore  .cursorrules  .gitignore  AGENTES_README.md  README.md  debug_scenario_4_results.json  files.txt  main.py  pyproject.toml  requirements.txt  run_specific_test.py  temp_file_lister.py  test_agents.py  test_integration.py
agents/: README.md  __init__.py  agent_communication.py  base.py  code_agent.py  echo_agent.py  orchestrator_agent.py  planner_agent.py  system_agent.py  test_sender.py  vio.py
agents/main_assistant/: README.md  __init__.py  main_assistant.py
agents/planning/: __init__.py  algorithms.py  execution_plan.py  task.py
agents/specialized/: README.md  __init__.py  memory_agent.py
config/: config.yaml  mcp_config.yaml  models.json
examples/: README.md  agent_communication_example.py  brave_api_mcp_test.py  brave_search_client_example.py  brave_search_server_example.py  code_agent_example.py  echo_agent_example.py  mcp_core_example.py  mcp_echo_client_example.py  mcp_http_client_example.py  memory_example.py  model_manager_example.py  run_tests.py  sqlite_mcp_example.py  system_agent_example.py  test_brave_api.py
examples/agents/: agent_communication_example.py  code_agent_example.py  echo_agent_example.py  memory_semantic_agent.py  orchestrator_example.py  planner_agent_example.py  (+1 more)
mcp/: README.md  __init__.py  core.py  init.py  resource_monitor.py
mcp/core/: init.py  (+5 more)
mcp_clients/: README.md
mcp_servers/: __init__.py  brave_search_server.py
memory/: __init__.py
models/: README.md  __init__.py
tts/: README.md  __init__.py
(+103 files in other folders)
